--- a/hello-world/values-production.yaml
+++ b/hello-world/values-production.yaml
@@ -1,3 +1,8 @@
 hello-world:
   image:
     tag: "1.0"
+  deploymentStrategy: 
+    type: RollingUpdate
+      rollingUpdate:
+        maxSurge: 2 
+        maxUnavailable: 0
